# swift_elixir_test

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  libtool  mix.exs  swiftc_wrapper
lib/: swift_elixir_test.ex
native/: ExampleClass.swift  caller.m  libnif.c
test/: swift_elixir_test_test.exs
